--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>DCC202 - Atividade 3: Samuel Henrique dos Santos Reis</title>
 </head>
 <body>
+    <main>
+        <h1>DCC202 - Atividade 3: Samuel Henrique dos Santos Reis</h1>
+        <p>Essa é uma pagina que fala sobre mim</p>
+
+
+    </main>
     
 </body>
 </html>
