--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
         <h1>DCC202 - Atividade 3: Samuel Henrique dos Santos Reis</h1>
         <p>Essa é uma pagina que fala sobre mim</p>
 
-
+        <section>
+           <h2>Naturalidade</h2>
+           <p>Sou natural da cidade de Conselheiro Lafaiete</p>
+        </section>
     </main>
     
 </body>
