Criado a segunda seção

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <main>
         <h1>DCC202 - Atividade 3: Samuel Henrique dos Santos Reis</h1>
         <p>Essa é uma pagina que fala sobre mim</p>
-
         <section>
            <h2>Naturalidade</h2>
            <p>Sou natural da cidade de Conselheiro Lafaiete</p>
         </section>
+        <section>
+            <h2>O que eu gosto de fazer?</h2>
+            <p>Eu gosto de assistir filmes, series e animes. Também gosto de jogos, futebol e acampar. </p>
+        </section>
     </main>
-    
 </body>
 </html>
